--- a/Flagrum.Web/Features/ModLibrary/Stats/Weapon.razor
+++ b/Flagrum.Web/Features/ModLibrary/Stats/Weapon.razor
@@ -1,6 +1,6 @@
 ﻿@using Flagrum.Web.Features.ModLibrary.Data
 <div class="box mt-6">
-    <EditForm Model="WeaponStats">
+    <EditForm Model="Stats">
         <div class="p-4">
             <table class="w-full right-align-all-labels">
                 <tr>
@@ -37,28 +37,28 @@
                 </tr>
                 <tr>
                     <td>
-                        <label>ATTACK</label>
-                    </td>
-                    <td>
-                        <NumberBox @bind-Value="WeaponStats.Attack"/>
-                    </td>
-                    <td>
-                        <label>CRITICAL</label>
-                    </td>
-                    <td>
-                        <NumberBox @bind-Value="WeaponStats.Critical"/>
-                    </td>
-                    <td>
                         <label>MAX HP</label>
                     </td>
                     <td>
-                        <NumberBox @bind-Value="WeaponStats.MaxHp"/>
+                        <NumberBox @bind-Value="Stats[Stat.MaxHp].Value"/>
                     </td>
                     <td>
                         <label>MAX MP</label>
                     </td>
                     <td>
-                        <NumberBox @bind-Value="WeaponStats.MaxMp"/>
+                        <NumberBox @bind-Value="Stats[Stat.MaxMp].Value"/>
+                    </td>
+                    <td>
+                        <label>ATTACK</label>
+                    </td>
+                    <td>
+                        <NumberBox @bind-Value="Stats[Stat.Attack].Value"/>
+                    </td>
+                    <td>
+                        <label>BALLISTIC RES</label>
+                    </td>
+                    <td>
+                        <NumberBox Max="100" @bind-Value="Stats[Stat.Ballistic].Value"/>
                     </td>
                 </tr>
                 <tr>
@@ -66,25 +66,25 @@
                         <label>STRENGTH</label>
                     </td>
                     <td>
-                        <NumberBox @bind-Value="WeaponStats.Strength"/>
+                        <NumberBox @bind-Value="Stats[Stat.Strength].Value"/>
                     </td>
                     <td>
                         <label>VITALITY</label>
                     </td>
                     <td>
-                        <NumberBox @bind-Value="WeaponStats.Vitality"/>
+                        <NumberBox @bind-Value="Stats[Stat.Vitality].Value"/>
                     </td>
                     <td>
                         <label>FIRE RES</label>
                     </td>
                     <td>
-                        <NumberBox Max="100" @bind-Value="WeaponStats.Fire"/>
+                        <NumberBox Max="100" @bind-Value="Stats[Stat.Fire].Value"/>
                     </td>
                     <td>
                         <label>ICE RES</label>
                     </td>
                     <td>
-                        <NumberBox Max="100" @bind-Value="WeaponStats.Ice"/>
+                        <NumberBox Max="100" @bind-Value="Stats[Stat.Ice].Value"/>
                     </td>
                 </tr>
                 <tr>
@@ -92,41 +92,35 @@
                         <label>MAGIC</label>
                     </td>
                     <td>
-                        <NumberBox @bind-Value="WeaponStats.Magic"/>
+                        <NumberBox @bind-Value="Stats[Stat.Magic].Value"/>
                     </td>
                     <td>
                         <label>SPIRIT</label>
                     </td>
                     <td>
-                        <NumberBox @bind-Value="WeaponStats.Spirit"/>
+                        <NumberBox @bind-Value="Stats[Stat.Spirit].Value"/>
                     </td>
                     <td>
                         <label>THUNDER RES</label>
                     </td>
                     <td>
-                        <NumberBox Max="100" @bind-Value="WeaponStats.Thunder"/>
+                        <NumberBox Max="100" @bind-Value="Stats[Stat.Thunder].Value"/>
                     </td>
                     <td>
                         <label>DARK RES</label>
                     </td>
                     <td>
-                        <NumberBox Max="100" @bind-Value="WeaponStats.Dark"/>
+                        <NumberBox Max="100" @bind-Value="Stats[Stat.Dark].Value"/>
                     </td>
                 </tr>
                 <tr>
                     <td class="pt-4">
                         <label class="@(Parent.StatsTotal <= 100 ? "" : "text-error")">@Parent.StatsTotal/100</label>
                     </td>
-                    <td colspan="5" class="pl-4 pt-4">
+                    <td colspan="7" class="pl-4 pt-4">
                         <div class="bg-black">
                             <div class="@(Parent.StatsTotal <= 100 ? "bg-accent1-200" : "bg-error")" style="width: @(Parent.StatsTotal <= 0 ? "0" : Parent.StatsTotal > 100 ? "100" : Parent.StatsTotal.ToString())%">&nbsp;</div>
                         </div>
-                    </td>
-                    <td>
-                        <label>BALLISTIC RES</label>
-                    </td>
-                    <td>
-                        <NumberBox Max="100" @bind-Value="WeaponStats.Ballistic"/>
                     </td>
                 </tr>
             </table>
@@ -139,27 +133,114 @@
     [CascadingParameter]
     public Configure Parent { get; set; }
 
-    private WeaponStatsModel WeaponStats { get; set; }
+    private Dictionary<Stat, StatsModel> Stats { get; set; }
 
     protected override void OnInitialized()
     {
-        WeaponStats = new WeaponStatsModel(Parent.Mod, () =>
+        Stats = new Dictionary<Stat, StatsModel>
         {
-            Parent.StatsTotal = (int)(
-                (WeaponStats.MaxHp ?? 0) * 0.2
-                + (WeaponStats.MaxMp ?? 0) * 0.2
-                + (WeaponStats.Strength ?? 0) * 0.2
-                + (WeaponStats.Vitality ?? 0) * 0.2
-                + (WeaponStats.Magic ?? 0) * 0.2
-                + (WeaponStats.Spirit ?? 0) * 0.2
-                + (WeaponStats.Fire ?? 0)
-                + (WeaponStats.Ice ?? 0)
-                + (WeaponStats.Thunder ?? 0)
-                + (WeaponStats.Dark ?? 0)
-                + (WeaponStats.Ballistic ?? 0)
-                + (WeaponStats.Attack ?? 0)
-                + (WeaponStats.Critical ?? 0));
+            {
+                Stat.MaxHp, StatsModel.Create(Parent.Mod.Type, Parent.Mod.Target, Stat.MaxHp, () => Parent.Mod.MaxHp, v =>
+                {
+                    Parent.Mod.MaxHp = v;
+                    UpdateStatCount();
+                })
+            },
+            {
+                Stat.MaxMp, StatsModel.Create(Parent.Mod.Type, Parent.Mod.Target, Stat.MaxMp, () => Parent.Mod.MaxMp, v =>
+                {
+                    Parent.Mod.MaxMp = v;
+                    UpdateStatCount();
+                })
+            },
+            {
+                Stat.Strength, StatsModel.Create(Parent.Mod.Type, Parent.Mod.Target, Stat.Strength, () => Parent.Mod.Strength, v =>
+                {
+                    Parent.Mod.Strength = v;
+                    UpdateStatCount();
+                })
+            },
+            {
+                Stat.Vitality, StatsModel.Create(Parent.Mod.Type, Parent.Mod.Target, Stat.Vitality, () => Parent.Mod.Vitality, v =>
+                {
+                    Parent.Mod.Vitality = v;
+                    UpdateStatCount();
+                })
+            },
+            {
+                Stat.Magic, StatsModel.Create(Parent.Mod.Type, Parent.Mod.Target, Stat.Magic, () => Parent.Mod.Magic, v =>
+                {
+                    Parent.Mod.Magic = v;
+                    UpdateStatCount();
+                })
+            },
+            {
+                Stat.Spirit, StatsModel.Create(Parent.Mod.Type, Parent.Mod.Target, Stat.Spirit, () => Parent.Mod.Spirit, v =>
+                {
+                    Parent.Mod.Spirit = v;
+                    UpdateStatCount();
+                })
+            },
+            {
+                Stat.Fire, StatsModel.Create(Parent.Mod.Type, Parent.Mod.Target, Stat.Fire, () => Parent.Mod.Fire, v =>
+                {
+                    Parent.Mod.Fire = v;
+                    UpdateStatCount();
+                })
+            },
+            {
+                Stat.Ice, StatsModel.Create(Parent.Mod.Type, Parent.Mod.Target, Stat.Ice, () => Parent.Mod.Ice, v =>
+                {
+                    Parent.Mod.Ice = v;
+                    UpdateStatCount();
+                })
+            },
+            {
+                Stat.Thunder, StatsModel.Create(Parent.Mod.Type, Parent.Mod.Target, Stat.Thunder, () => Parent.Mod.Thunder, v =>
+                {
+                    Parent.Mod.Thunder = v;
+                    UpdateStatCount();
+                })
+            },
+            {
+                Stat.Dark, StatsModel.Create(Parent.Mod.Type, Parent.Mod.Target, Stat.Dark, () => Parent.Mod.Dark, v =>
+                {
+                    Parent.Mod.Dark = v;
+                    UpdateStatCount();
+                })
+            },
+            {
+                Stat.Ballistic, StatsModel.Create(Parent.Mod.Type, Parent.Mod.Target, Stat.Ballistic, () => Parent.Mod.Ballistic, v =>
+                {
+                    Parent.Mod.Ballistic = v;
+                    UpdateStatCount();
+                })
+            }
+        };
+
+        if (Parent.Mod.Type is (int)BinmodType.Weapon or (int)BinmodType.Multi_Weapon)
+        {
+            Stats.Add(Stat.Attack, StatsModel.Create(Parent.Mod.Type, Parent.Mod.Target, Stat.Attack, () => Parent.Mod.Attack, v =>
+            {
+                Parent.Mod.Attack = v;
+                UpdateStatCount();
+            }));
+            Stats.Add(Stat.Critical, StatsModel.Create(Parent.Mod.Type, Parent.Mod.Target, Stat.Critical, () => Parent.Mod.Critical, v =>
+            {
+                Parent.Mod.Critical = v;
+                UpdateStatCount();
+            }));
+        }
+
+        UpdateStatCount();
+    }
+
+    private void UpdateStatCount()
+    {
+        if (Stats != null)
+        {
+            Parent.StatsTotal = Stats.Sum(s => s.Value.Cost);
             StateHasChanged();
-        });
+        }
     }
 }
