--- a/Flagrum.Web/Layout/MenuItem.razor
+++ b/Flagrum.Web/Layout/MenuItem.razor
@@ -3,9 +3,9 @@
 <div class="py-4 pl-5 pr-6 flex flex-row items-center hover:bg-grey-700 transition-colors cursor-pointer @(IsActive ? "bg-grey-800" : "transparent")"
      @onclick="OnClick">
     <div>
-        <span class="material-icons-outlined text-accent1-200">@Icon</span>
+        <span class="material-icons text-accent1-200">@Icon</span>
     </div>
-    <div class="pl-3 pb-1.5 flex-grow font-display text-accent1-200">
+    <div class="pl-3 pr-3 pb-1.5 flex-grow font-display text-accent1-200">
         @Text
     </div>
 </div>
