--- a/Flagrum.Web/Features/ModLibrary/Stats/Outfit.razor
+++ b/Flagrum.Web/Features/ModLibrary/Stats/Outfit.razor
@@ -49,13 +49,13 @@
                         <NumberBox @bind-Value="Stats[Stat.MaxMp].Value"/>
                     </td>
                     <td>
-                        <label>FIRE RES</label>
+                        <label>FIRE RES %</label>
                     </td>
                     <td>
                         <NumberBox Max="100" @bind-Value="Stats[Stat.Fire].Value"/>
                     </td>
                     <td>
-                        <label>ICE RES</label>
+                        <label>ICE RES %</label>
                     </td>
                     <td>
                         <NumberBox Max="100" @bind-Value="Stats[Stat.Ice].Value"/>
@@ -75,13 +75,13 @@
                         <NumberBox @bind-Value="Stats[Stat.Vitality].Value"/>
                     </td>
                     <td>
-                        <label>THUNDER RES</label>
+                        <label>THUNDER RES %</label>
                     </td>
                     <td>
                         <NumberBox Max="100" @bind-Value="Stats[Stat.Thunder].Value"/>
                     </td>
                     <td>
-                        <label>DARK RES</label>
+                        <label>DARK RES %</label>
                     </td>
                     <td>
                         <NumberBox Max="100" @bind-Value="Stats[Stat.Dark].Value"/>
@@ -101,7 +101,7 @@
                         <NumberBox @bind-Value="Stats[Stat.Spirit].Value"/>
                     </td>
                     <td>
-                        <label>BALLISTIC RES</label>
+                        <label>BALLISTIC RES %</label>
                     </td>
                     <td>
                         <NumberBox Max="100" @bind-Value="Stats[Stat.Ballistic].Value"/>
