--- a/Flagrum.Web/Features/ModLibrary/Configure.razor
+++ b/Flagrum.Web/Features/ModLibrary/Configure.razor
@@ -493,6 +493,8 @@
                     Mod.ThumbnailBytes = thumbnailBytes;
                     BuildContext.ProcessThumbnailImage(thumbnailBytes);
                 }
+
+                InvokeAsync(StateHasChanged);
             });
     }
 }
