--- a/Flagrum.Web/Features/Information/About.razor
+++ b/Flagrum.Web/Features/Information/About.razor
@@ -1,5 +1,29 @@
 ﻿@page "/about"
 
 <div class="p-6">
-    <h3 class="text-grey-300">Coming Soon™</h3>
+    <h3 class="text-grey-300">We are Exineris</h3>
+    <span>
+
+    </span>
+
+    <h3 class="text-grey-300">About Flagrum</h3>
+    <span>
+        Flagrum was conceived as the brainchild of Kizari and impatient-traveler as an all-in-one
+        replacement for the existing mod tools.
+    </span>
+
+    <h3 class="text-grey-300">Join the Cause</h3>
+    <span>
+        We are always looking for developers and artists to join in the good fight. Unfortunately with
+        official tooling and support being cancelled, we need as much help as we can get to continue
+        taking FFXV modding to the next level. Come say hi in the Exineris Discord and let us know
+        you want to help.
+    </span>
+
+    <h3 class="text-grey-300">Want to Support Us?</h3>
+    <span>
+        These tools take a monumental amount of time and effort to develop. We are all volunteers and
+        we believe the modding tools should be free and open-source to all. If you want to help
+        support the ongoing development of Flagrum and our other projects, please consider donating.
+    </span>
 </div>
