--- a/Flagrum.Web/Features/Settings/SettingsPage.razor
+++ b/Flagrum.Web/Features/Settings/SettingsPage.razor
@@ -10,7 +10,7 @@
         <div class="bg-error mb-6 p-4">
             <span class="text-white">
                 Flagrum was unable to automatically detect the location of your game files.
-                Please set the paths below.
+                Please ensure Final Fantasy XV is installed on your computer then set the paths below.
             </span>
         </div>
     }
