--- a/Flagrum.Web/Layout/MainMenu.razor
+++ b/Flagrum.Web/Layout/MainMenu.razor
@@ -1,14 +1,14 @@
 ﻿<CascadingValue Value="this">
     <div class="h-full bg-dark flex-shrink-0 flex flex-col border-dark-550 border-r">
         <MenuItem Icon="apps" Text="Mod Library" DefaultActive="true" Uri="/"/>
-        <MenuItem Icon="menu_book" Text="Tutorials" Uri="/tutorials" />
-        <MenuItem Icon="map" Text="Roadmap" Uri="/roadmap" />
+        <MenuItem Icon="menu_book" Text="Tutorials" Uri="/tutorials"/>
+        <MenuItem Icon="map" Text="Roadmap" Uri="/roadmap"/>
         @* <MenuItem Icon="videogame_asset" Text="Asset Explorer" Uri="/assets"/> *@
         @* <MenuItem Icon="search" Text="File Inspector" Uri="/inspector"/> *@
         @* <MenuItem Icon="share" Text="Sequence Editor" Uri="/sequenceeditor"></MenuItem> *@
         <div class="flex-grow"></div>
-        <MenuItem Icon="info_outline" Text="About" Uri="/tutorials" />
-        <MenuItem Icon="settings" Text="Settings" Uri="/settings" />
+        <MenuItem Icon="info_outline" Text="About" Uri="/about"/>
+        <MenuItem Icon="settings" Text="Settings" Uri="/settings"/>
     </div>
 </CascadingValue>
 
