--- a/Flagrum.Web/Features/ModLibrary/Configure.razor
+++ b/Flagrum.Web/Features/ModLibrary/Configure.razor
@@ -1,8 +1,8 @@
 ﻿@page "/mod/configure"
 @using Flagrum.Core.Utilities
 @using Flagrum.Web.Features.ModLibrary.Data
-@using System.IO
 @using Flagrum.Core.Archive
+@using System.IO
 
 @inject NavigationManager Navigation
 @inject JSInterop Interop
@@ -267,8 +267,9 @@
 
         if (Mod.Type == (int)BinmodType.StyleEdit)
         {
-            BuildContext.ProcessThumbnailImage(Mod.ThumbnailBytes);
-            File.WriteAllBytes($"{IOHelper.GetWebRoot()}\\images\\current_thumbnail.png", Mod.ThumbnailBytes);
+            BuildContext.ThumbnailBtex = Mod.ThumbnailBytes;
+    //BuildContext.ProcessThumbnailImage(Mod.ThumbnailBytes);
+    //File.WriteAllBytes($"{IOHelper.GetWebRoot()}\\images\\current_thumbnail.png", Mod.ThumbnailBytes);
         }
 
         HasSelectedDataForModel[0] = true;
@@ -333,11 +334,6 @@
         }
 
         File.WriteAllBytes($"{IOHelper.GetWebRoot()}\\images\\{Mod.Uuid}.png", Mod.PreviewBytes);
-
-        if (Mod.Type == (int)BinmodType.StyleEdit)
-        {
-            File.WriteAllBytes($"{IOHelper.GetWebRoot()}\\images\\{Mod.Uuid}_t.png", Mod.ThumbnailBytes);
-        }
 
         if (BuildContext.Flags.HasFlag(BuildContextFlags.NeedsBuild))
         {
