--- a/Flagrum.Web/Features/ModLibrary/Index.razor
+++ b/Flagrum.Web/Features/ModLibrary/Index.razor
@@ -1,8 +1,8 @@
 ﻿@page "/"
-@using System.Collections.Concurrent
-@using System.IO
 @using Flagrum.Core.Archive
 @using Flagrum.Core.Utilities
+@using System.Collections.Concurrent
+@using System.IO
 
 @inject NavigationManager Navigation
 @inject Settings Settings
@@ -78,8 +78,18 @@
             {
                 var binmodList = ModlistEntry.FromFile(Settings.BinmodListPath);
                 var localMods = Directory.GetFiles(Settings.ModDirectory, "*.ffxvbinmod", SearchOption.TopDirectoryOnly);
-                var workshopMods = Directory.GetFiles(Settings.WorkshopDirectory, "*.ffxvbinmod", SearchOption.AllDirectories);
-                var allMods = localMods.Union(workshopMods);
+                IEnumerable<string> allMods;
+
+                if (Directory.Exists(Settings.WorkshopDirectory))
+                {
+                    var workshopMods = Directory.GetFiles(Settings.WorkshopDirectory, "*.ffxvbinmod", SearchOption.AllDirectories);
+                    allMods = localMods.Union(workshopMods);
+                }
+                else
+                {
+                    allMods = localMods;
+                }
+
                 var mods = new ConcurrentBag<Binmod>();
 
                 Parallel.ForEach(allMods, file =>
@@ -88,6 +98,7 @@
                     var modmetaBytes = unpacker.UnpackFileByQuery("index.modmeta", out _);
                     var mod = Binmod.FromModmetaBytes(modmetaBytes, BinmodTypeHelper, Logger);
                     var previewBytes = unpacker.UnpackFileByQuery("$preview.png.bin", out _);
+
                     var binmodListing = binmodList.FirstOrDefault(e => file.Contains(e.Path.Replace('/', '\\')));
 
                     if (mod == null)
@@ -100,6 +111,11 @@
                     {
                         Logger.LogWarning($"Could not find binmod.list entry for {file}");
                         return;
+                    }
+
+                    if (mod.Type == (int)BinmodType.StyleEdit)
+                    {
+                        mod.ThumbnailBytes = unpacker.UnpackFileByQuery("default.png", out _);
                     }
 
                     mod.Description = mod.Description?.Replace("\\n", "\n");
