--- a/Flagrum.Web/Features/ModLibrary/Stats/Weapon.razor
+++ b/Flagrum.Web/Features/ModLibrary/Stats/Weapon.razor
@@ -1,4 +1,5 @@
 ﻿@using Flagrum.Web.Features.ModLibrary.Data
+@using Flagrum.Core.Archive
 <div class="box mt-6">
     <EditForm Model="Stats">
         <div class="p-4">
